# CyberRemesherAndUV

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  justfile
.claude/workflows/: perf-push.js  quad-quality-push.js
.github/workflows/: ci.yml  package-smoke.yml  publish-python.yml  publish-swift.yml  release.yml
apps/bridge/: CMakeLists.txt  main.cpp
apps/cli/: CMakeLists.txt  main.cpp
apps/mobile/: README.md
apps/mobile/android/app/src/main/cpp/: CMakeLists.txt  cyber_jni.cpp
blender/cyberremesh_bridge/: __init__.py
capi/: CMakeLists.txt
capi/include/: cyber_capi.h
capi/src/: capi.cpp
cmake/: CompilerWarnings.cmake  CyberRemesherConfig.cmake.in  QuadCoverSolver.cmake  SciPP.cmake
docs/: ROADMAP.md  integer-parametrization-plan.md  mcf-integer-layout-plan.md  native-miq-plan.md  quadcover-plan.md  roadmap_dashboard.html  uv-atlas-plan.md
examples/: 01_quad_remesh.py  02_target_density.py  03_adaptivity.py  04_sharp_edges.py  05_pure_quads.py  06_hole_fill.py  07_baking.py  08_load_model.py  09_test_models.py  10_vs_reference.py  11_benchmark.py  12_cad_robustness.py  13_broken_robustness.py  14_uv_atlas.py  15_uv_vs_xatlas.py  README.md  common.py  requirements.txt  run.sh  run_all.py  scratch_ears.py  scratch_multires_ab.py  test_count_match.py
examples/reference/: autoremesher_harness.cpp  autoremesher_solve.cpp  autoremesher_solve.hpp  build_autoremesher.sh  build_quadriflow.sh
packaging/: README.md  version.cmake  version.sh
packaging/android/: build_aab.sh
packaging/ios/: ExportOptions.plist  build_archive.sh
packaging/linux/: appimage.sh  (+1 more)
python/: README.md  pyproject.toml
python/cyberbridge/: __init__.py  __main__.py  client.py
python/cyberremesh/: README.md  pyproject.toml
python/cyberremesh/cyberremesh/: __init__.py  _ffi.py  api.py
python/cyberremesh/tests/: README.md  test_api.py  test_bake.py  test_document_invariants.py  test_golden.py  test_hole_fill_policy.py  test_uv_atlas.py
python/tests/: test_integration.py
src/accel/: CMakeLists.txt
src/accel/include/cyber/accel/: backend.hpp  buffer.hpp  primitives.hpp
src/accel/src/: backend_primitives.cpp  cpu_backend.cpp  cuda_backend.cu  metal_backend.mm  opencl_backend.cpp  registry.cpp
src/app/: CMakeLists.txt  shell_notes.md
src/app/include/cyber/app/: document.hpp  input.hpp  serial.hpp  shell_desktop.hpp  undo.hpp
src/app/src/: document.cpp  input.cpp  undo.cpp
src/bake/: CMakeLists.txt
src/bake/include/cyber/bake/: bake.hpp  tangent.hpp
src/bake/src/: bake.cpp
src/bakecage/: CMakeLists.txt
src/bakecage/include/cyber/bakecage/: cage.hpp  links.hpp  preview.hpp
src/bakecage/src/: cage.cpp  links.cpp
src/core/: CMakeLists.txt
src/core/include/cyber/core/: attributes.hpp  bvh.hpp  io.hpp  isotropic.hpp  math.hpp  mesh.hpp  pipeline.hpp  progress.hpp  quadrangulate.hpp  reference_surface.hpp  remesh_params.hpp  version.hpp
src/core/src/: bvh.cpp  io.cpp  io_gltf.cpp  io_internal.hpp  io_obj.cpp  io_ply.cpp  io_stl.cpp  isotropic.cpp  mesh.cpp  mesh_diagnostics.cpp  mesh_ops.cpp  pipeline.cpp  quadrangulate.cpp  reference_surface.cpp  remesh_params.cpp  version.cpp
src/imageio/: CMakeLists.txt
src/imageio/include/cyber/imageio/: exr.hpp  image.hpp  load.hpp  png.hpp  zip.hpp
src/imageio/src/: detail.hpp  exr.cpp  image.cpp  load.cpp  png.cpp  zip.cpp
src/net/: CMakeLists.txt
src/net/include/cyber/net/: client.hpp  message.hpp  protocol.hpp  server.hpp  session.hpp
src/net/src/: client.cpp  mesh_json.hpp  message.cpp  protocol.cpp  server.cpp  session.cpp  socket_io.cpp  socket_io.hpp
src/quadrangulate/: CMakeLists.txt
src/quadrangulate/include/cyber/quadrangulate/: crossfield.hpp  field_quadrangulator.hpp  mcf_layout.hpp  position_field.hpp  quadcover_extractor.hpp  seamless_solver.hpp
src/quadrangulate/src/: crossfield.cpp  field_quadrangulator.cpp  mcf_constraints.cpp  mcf_detail.hpp  mcf_edgediff.cpp  mcf_extract.cpp  mcf_flow.cpp  mcf_layout.cpp  position_field.cpp  quad_extract.cpp  quadcover_extractor.cpp  seamless_solver.cpp
src/render/: CMakeLists.txt
src/render/include/cyber/render/: benchmark.hpp  camera.hpp  mesh_stream.hpp  overlays.hpp  rhi.hpp  stage_preview.hpp
src/render/src/: camera.cpp  mesh_stream.cpp  metal_backend.mm  overlays.cpp  rhi.cpp  stage_preview.cpp  vulkan_backend.cpp
src/retopo/: CMakeLists.txt
src/retopo/include/cyber/retopo/: actions.hpp  boundary.hpp  build_tools.hpp  commands.hpp  dissolve.hpp  erase.hpp  interactivity.hpp  loop_metrics.hpp  loops.hpp  move.hpp  neighbors.hpp  paths.hpp  picking.hpp  pins.hpp  relax.hpp  snapping.hpp  stroke_interpreter.hpp  stroke_recognizer.hpp  symmetry.hpp  tweak.hpp
src/retopo/src/: actions.cpp  snapping.cpp
swift/: Package.swift  README.md
tests/: CMakeLists.txt
tests/accel/: test_cpu_backend.cpp  test_gpu_geometry.cpp  test_gpu_parity.cpp  test_primitives.cpp
tests/app/: test_app.cpp
tests/bake/: test_ao_projected.cpp  test_bake.cpp  test_tangent.cpp  test_texture_bake.cpp
tests/bakecage/: test_bakecage.cpp
tests/capi/: test_capi.cpp
tests/cli/: test_cli.py
tests/core/: test_bvh.cpp  test_golden.cpp  test_golden_organic.cpp  test_holes.cpp  test_io_formats.cpp  test_io_obj.cpp  test_isotropic.cpp  test_mesh.cpp  test_mesh_property.cpp  test_pipeline.cpp  test_pure_quad_quality.cpp  test_reference_surface.cpp  test_remesh_params.cpp  test_version.cpp
tests/imageio/: test_imageio.cpp  test_load.cpp  test_load_general.cpp
tests/net/: test_bridge.cpp
tests/packaging/: test_version_identity.py
tests/quadrangulate/: test_crossfield.cpp  test_field_quadrangulator.cpp  test_mcf_edgediff.cpp  test_mcf_flow.cpp  test_mcf_layout.cpp  test_position_field.cpp  test_quad_cleanup.cpp  test_quadcover_extractor.cpp  test_seamless_solver.cpp
tests/render/: test_camera.cpp  test_mesh_stream.cpp  test_overlays.cpp  test_stage_preview.cpp
tests/retopo/: test_retopo.cpp  test_retopo_advanced.cpp
tests/uv/: test_uv.cpp  test_uv_clone.cpp
tools/: license_audit.py
(+110 files in other folders)
